Tabs: Fixed tablist overlapping issues for carousel style 2 in small view.

--- a/src/plugins/tabs/tabs-smallViewUnder.scss
+++ b/src/plugins/tabs/tabs-smallViewUnder.scss
@@ -55,6 +55,8 @@
 		padding-bottom: $smallViewToolbarSize;
 		background: #eee;
 		[role="tablist"] {
+			height: auto;
+			bottom: 0;
 			margin-top: -$smallViewToolbarSize;
 			li {
 				&[role="presentation"] {
